--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../style/images/favicon.png">
-  <title>NextCycle</title>
+  <title>NextCycle - Capss Infusion</title>
   <link rel="stylesheet" type="text/css" href="../style/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../style/css/plugins.css">
   <link rel="stylesheet" type="text/css" href="../style/revolution/css/settings.css">
@@ -106,11 +106,12 @@
       </div>
       <!-- /.widget -->
     </div>
-    <div class="wrapper image-wrapper bg-image page-title-wrapper inverse-text" data-image-src="../style/images/nextcycle/ez360bg.jpg">
+    <div class="wrapper image-wrapper bg-image page-title-wrapper inverse-text" data-image-src="../style/images/nextcycle/startups/capss/bg.jpg">
         <div class="container inner text-center">
           <div class="space90"></div>
-          <h1 class="page-title">EZ360 VR Player</h1>
-          <p class="lead">The #1 solution for easy distribution, management and playback of VR content.</p>
+          <h1 class="page-title">Capss Infusion</h1>
+          <p class="lead">CAPss provides an exciting ‘WOW FACTOR’ which serves as visual confirmation
+            of functional, consumer and marketing claims.</p>
         </div>
         <!-- /.container -->
       </div>
@@ -119,55 +120,56 @@
         <div class="container inner">
           <div class="row">
             <div class="col-lg-10 offset-lg-1">
-              <h2>About EZ360</h2>
+              <h2>About Capss Infusion</h2>
               <div class="row no-gutters">
                 <div class="col-md-9 text-justify">
                   <p class="lead">
-                    EZ360 was created to make showcasing 360° video on events hassle free and has since evolved to a complete Content Management System that makes the management, distribution and playback of Virtual Reality content as easy as possible.</p>
-                  <p>Many businesses that are working with VR are creating VR content or solutions for others to create VR content. Instead of focussing on the creation of the content itself, our focus lies on enabling organizations with their own VR content to successfully apply this in practice.
-                    We differentiate ourselves from our competitors by focusing on ease of use. We make it easy for organisations to use Virtual Reality in a scalable way. We have a product that is being used by organisations around the world. We are continuously improving the product and adding new features and support for different type of headsets.</p>
+                    Over time active ingredients may settle, separate, lose their efficacy and expire. In other cases, products require a complicated mixing process by the consumer, which is often time consuming, prone to error and messy. With the CAPss mixing technology the main ingredients are stored in a container underneath a cap and separated from the liquid in the base. The Widget reduces or prevents degradation and eliminates the need for chemical preservatives in perishable items. For chemical, medical and pharmaceutical applications, the precise dosing and instant mixing provided by CAPss eliminates complexity and allows for revolutionary packaging systems.</p>
+                  <p>Possible applications include beverages, CBD products, nutraceuticals, aeration, hygiene, hair care, pharmaceuticals, chemical and much more. CAPss can be customized to fit an array of base containers in a variety of design & aesthetic options. Upon opening the container, CAPss automatically propels and instantly mixes a stream of active ingredients (vitamins, flavors, serums, colors, etc.) into the base, providing an exciting visual effect and confirmation to the user that they have activated their product. In this way the consumer is involved in the creation of the end product.</p>
 
                 </div>
                 
                 <!--/column -->
                 <div class="col-md-2 ml-auto">
-                    <img src="..\style\images\nextcycle\logo_ez360_2019_200x47.png" class="img-fluid" style="padding-bottom: 20px;" alt="EZ360 logo">
+                    <img src="..\style\images\nextcycle\startups/capss/logo.png" class="img-fluid" style="padding-bottom: 20px;" alt="logo">
                   <ul class="list-unstyled">
                     <li>
                       <h5 class="mb-5">Founders</h5>
-                      <p><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656/" target="_blank" class="nocolor">Laurens van Roomen</a> (26), <a href="https://nl.linkedin.com/in/nick-kole-b55322a7" target="_blank" class="nocolor">Nick Kole</a> (28)</p>
+                      <p><a href="https://www.linkedin.com/in/dennisheijn/" target="_blank" class="nocolor">Dennis Heijn</a></br>
+                        <a href="https://www.linkedin.com/in/huub-maas-4a1b991/" target="_blank" class="nocolor">Huub Maas</a></br>
+                        <a href="https://www.linkedin.com/in/casper-koppelle-21aa0142" target="_blank" class="nocolor">Casper Koppelle</a></p>
                     </li>
                     <li>
                         <h5 class="mb-5">Website</h5>
-                        <p><a href="https://ez-360.com" target="_blank" class="nocolor">www.ez-360.com</a></p>
+                        <p><a href="https://capss-infusion.com/" target="_blank" class="nocolor">capss-infusion.com</a></p>
                       </li>
                     <li>
                       <h5 class="mb-5">Annual Revenue</h5>
-                      <p>€100.000-200.000</p>
+                      <p>-</p>
                     </li>
                   </ul>
                 </div>
                 <!--/column -->
               </div>
               <!--/.row -->
-              <div class="space60"></div>
+              <!-- <div class="space60"></div>
               <h2>Funding</h2>
               <div class="row no-gutters">
                 <ul class="progress-list">
                     <li>
-                      <p>€25.000 / 100.000 goal</p>
-                      <div class="progressbar line blue" data-value="25"></div>
+                      <p>€0 / 0 goal</p>
+                      <div class="progressbar line blue" data-value="100"></div>
                     </li>
                     </ul>
-            </div>
+            </div> -->
             <!--/.row -->
 
-            <p>Strenghts/ Weaknesses</p>
-            <span class="badge badge-pill badge-success">Development</span>
+            <!-- <p>Strenghts/ Weaknesses</p> -->
+            <!-- <span class="badge badge-pill badge-success">Development</span>
             <span class="badge badge-pill badge-success">Marketing</span>
             <span class="badge badge-pill badge-success">Support</span>
             <span class="badge badge-pill badge-warning">Networking</span>
-            <span class="badge badge-pill badge-danger">Sales</span>
+            <span class="badge badge-pill badge-danger">Sales</span> -->
             
 
 
@@ -180,12 +182,10 @@
         <div class="container-fluid pl-30 pr-30">
           <div class="grid-view">
             <div class="carousel owl-carousel" data-margin="30" data-dots="true" data-autoplay="false" data-autoplay-timeout="5000" data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "1441":{"items": "3"}}'>
-              <div class="item"><img src="../style/images/nextcycle/ez360/1.jpg" alt="" /></div>
-              <div class="item"><img src="../style/images/nextcycle/ez360/2.jpg" alt="" /></div>
-              <div class="item"><img src="../style/images/nextcycle/ez360/3.jpg" alt="" /></div>
-              <div class="item"><img src="../style/images/nextcycle/ez360/4.jpg" alt="" /></div>
-              <div class="item"><img src="../style/images/nextcycle/ez360/5.jpg" alt="" /></div>
-              <div class="item"><img src="../style/images/nextcycle/ez360/6.jpg" alt="" /></div>
+              <div class="item"><img src="../style/images/nextcycle/startups/capss/1.jpg" alt="" /></div>
+              <div class="item"><img src="../style/images/nextcycle/startups/capss/2.jpg" alt="" /></div>
+              <div class="item"><img src="../style/images/nextcycle/startups/capss/3.jpg" alt="" /></div>
+              <div class="item"><img src="../style/images/nextcycle/startups/capss/4.jpg" alt="" /></div>
             </div>
             <!-- /.owl-carousel -->
             <div class="space140"></div>
